--- a/src/test/java/resources/application.properties
+++ b/src/test/java/resources/application.properties
@@ -1,4 +1,8 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:postgresql://localhost/contacts
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=true
