added flyway db migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,34 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
+spring.datasource.username=postgres
+spring.datasource.password=123
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=false
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database=postgresql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+#old hibernate fix (need hibernate 5.4.x)
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
+
+#flyway kostyll
+#spring.flyway.baselineOnMigrate = true
+
+
+
+
 #spring.h2.console.enabled=true
 ##server.port=8084
 #
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.driverClassName=org.h2.Driver
 #spring.datasource.username=sa
-#spring.datasource.password=
+#spring.datasource.password=sa
 #
 #spring.jpa.show-sql=true
 ##spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/contacts
-spring.datasource.username=postgres
-spring.datasource.password=123
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database=postgresql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
 #spring.datasource.initialization-mode=ALWAYS
 #spring.datasource.schema=classpath*:database/initDB.sql
 #spring.datasource.data=classpath*:database/populateDB.sql
-
-#old hibernate fix (need hibernate 5.4.x)
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
