--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,8 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 #flyway kostyll
 #spring.flyway.baselineOnMigrate = true
 
-
+springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger-ui
 
 
 #spring.h2.console.enabled=true
