--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ springdoc.swagger-ui.path=/swagger-ui
 #spring.datasource.password=sa
 #
 #spring.jpa.show-sql=true
-##spring.jpa.hibernate.ddl-auto=update
+##spring.jpa.hibernate.ddl-auto=updateById
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 #spring.datasource.initialization-mode=ALWAYS
