--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,7 @@
         <!--<dependency>-->
             <!--<groupId>javax.validation</groupId>-->
             <!--<artifactId>validation-api</artifactId>-->
-            <!--<version>2.0.1.Final</version>-->
+            <!--&lt;!&ndash;<version>2.0.1.Final</version>&ndash;&gt;-->
         <!--</dependency>-->
         <!--<dependency>-->
             <!--<groupId>org.hibernate</groupId>-->
