--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation = true
 springdoc.api-docs.path=/api
 springdoc.swagger-ui.path=/swagger-ui
 
+#actuator port:
+management.server.port = 8081
+management.endpoints.web.exposure.include=*
